--- a/index.ipynb
+++ b/index.ipynb
@@ -178,7 +178,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "\"art vandelay\" # 'Art Vandelay'\n",
+    "\"art vandelay\".title(art)"
    ]
   },
   {
