--- a/index.ipynb
+++ b/index.ipynb
@@ -172,24 +172,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-f9d4906210cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\"art vandelay\"\u001b[0m \u001b[0;31m# 'Art Vandelay'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;34m\"art vandelay\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'Art Vandelay'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "\"art vandelay\".title(a)"
+    "\"art vandelay\".title()"
    ]
   },
   {
@@ -207,7 +206,8 @@
    },
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\" # 'CEO'\n",
+    "\"Ceo\".u"
    ]
   },
   {
