automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\" # False\n",
+    "bool(art.vandelay@vande)"
    ]
   },
   {
