automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,8 +244,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n",
-    "bool(art.vandelay@vandelay.co)"
+    "\"art.vandelay@vandelay.co\" # False\n"
    ]
   },
   {
