--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,8 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n"
+    "\"art.vandelay@vandelay.co\" # False\n",
+    "\"art.vandelay@vand\""
    ]
   },
   {
