--- a/index.ipynb
+++ b/index.ipynb
@@ -256,14 +256,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'\n"
+    "'vandelay.com' # 'www.vandelay.com'\n",
+    "\"www.\"+\"vandelay.com\""
    ]
   },
   {
