--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,8 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 7285553335"
+    "\"7285553334\" # 7285553335\n",
+    "int(7285334)"
    ]
   },
   {
