automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,14 +293,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285335"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"7285553334\" # 7285553335\n",
-    "int(7285334)"
+    "int(7285334) + 1"
    ]
   },
   {
@@ -311,7 +320,8 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 7285553336"
+    "\"7285553334\" # 7285553336\n",
+    "type.(72)"
    ]
   },
   {
